<resources>
    <string name="app_name">WeatherPXml</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Start Frag-->
    <string name="city">City</string>
    <string name="next">Next</string>
    <string name="change_city">Change City</string>
    <string name="wind">Wind: %1$s</string>
    <string name="clouds">Clouds: %1$s</string>
    <string name="visibility">Visibility: %1$s</string>
    <string name="feels_like">Feels like: %1$s</string>
    <string name="faren">%1$s °F</string>
    <string name="use_my_location">Use my Location</string>
    <string name="lineee">---------------------------------</string>
    <string name="or">OR</string>
</resources>